--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Favicon -->
+    <link rel="icon" href="https://banner2.cleanpng.com/20240214/tbr/transparent-javascript-icon-webpage-displaying-various-elements-with-action-1710878849019.webp">
     <title>Arpit Kapoor</title>
 </head>
 <body>
