--- a/index.html
+++ b/index.html
@@ -1,13 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Favicon -->
-    <link rel="icon" href="https://banner2.cleanpng.com/20240214/tbr/transparent-javascript-icon-webpage-displaying-various-elements-with-action-1710878849019.webp">
+    <link rel="icon"
+        href="https://banner2.cleanpng.com/20240214/tbr/transparent-javascript-icon-webpage-displaying-various-elements-with-action-1710878849019.webp">
+    <!-- Styles -->
+    <link rel="stylesheet" href="style.css">
     <title>Arpit Kapoor</title>
 </head>
+
 <body>
+    <div class="root"></div>
     <h1>Hello World!!</h1>
+    <p>This is work in progress..</p>
 </body>
+
 </html>
