--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="icon"
         href="https://banner2.cleanpng.com/20240214/tbr/transparent-javascript-icon-webpage-displaying-various-elements-with-action-1710878849019.webp">
     <!-- Styles -->
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles.css">
     <title>Arpit Kapoor</title>
 </head>
 
