--- a/index.html
+++ b/index.html
@@ -7,15 +7,21 @@
     <!-- Favicon -->
     <link rel="icon"
         href="https://banner2.cleanpng.com/20240214/tbr/transparent-javascript-icon-webpage-displaying-various-elements-with-action-1710878849019.webp">
+    <!-- Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
+        rel="stylesheet">
     <!-- Styles -->
     <link rel="stylesheet" href="styles.css">
     <title>Arpit Kapoor</title>
 </head>
 
 <body>
-    <div class="root"></div>
-    <h1>Hello World!!</h1>
-    <p>This is work in progress..</p>
+    <div class="root open-sans">
+        <h1>Hello World!!</h1>
+        <h3>This is work in progress..</h3>
+    </div>
 </body>
 
 </html>
